--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,8 +10,9 @@
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;700&family=Maven+Pro:wght@600&family=Poppins:wght@100;300;400;600;700&family=Roboto:wght@500&family=Yeseva+One&display=swap" rel="stylesheet">
-<link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Inter:wght@500;700&family=Manrope:wght@200;400;700&family=Maven+Pro:wght@600&family=Poppins:wght@100;300;400;600;700&family=Roboto:wght@500&family=Yeseva+One&display=swap" rel="stylesheet"><link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet">
                 
   <!--
       manifest.json provides metadata used when your web app is installed on a
